--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
       "pure.js",
       "pure.d.ts"
     ],
+    "dependencies": {
+      "amazon-cognito-identity-js": "^4.5.12",
+      "graphql-request": "^3.4.0"
+    },
     "devDependencies": {
       "@babel/core": "^7.7.2",
       "@babel/preset-env": "^7.7.1",
