--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "jsnext:main": "dist/legalesign.esm.js",
     "types": "types/index.d.ts",
     "typings": "types/index.d.ts",
+    "jest": {
+        "setupFiles": [
+            "dotenv/config"
+        ],
+      "testEnvironment": "node"
+    },
     "scripts": {
-        "test": "yarn lint && yarn test:unit && yarn test:types && yarn typecheck",
-        "test:unit": "jest",
-        "test:types": "zx ./tests/types/scripts/test.mjs",
+        "test": "jest --runInBand",
         "lint": "eslint '{src,types}/**/*.{ts,js}' && yarn prettier-check",
         "typecheck": "tsc",
         "build": "yarn clean && yarn rollup -c",
@@ -19,11 +23,6 @@
         "prepublishOnly": "echo \"\nPlease use ./scripts/publish instead\n\" && exit 1",
         "prettier": "prettier './**/*.{js,ts,md,html,css}' --write",
         "prettier-check": "prettier './**/*.{js,ts,md,html,css}' --check"
-    },
-    "jest": {
-        "transform": {
-            "^.+\\.[t|j]sx?$": "babel-jest"
-        }
     },
     "keywords": [
         "Legalesign",
@@ -42,13 +41,14 @@
     ],
     "dependencies": {
         "amazon-cognito-identity-js": "^4.5.12",
+        "dotenv": "^16.3.2",
         "graphql-request": "^3.4.0"
     },
     "devDependencies": {
         "@babel/core": "^7.7.2",
         "@babel/preset-env": "^7.23.8",
         "@rollup/plugin-replace": "^2.3.1",
-        "@types/jest": "^24.0.25",
+        "@types/jest": "^24.9.1",
         "@typescript-eslint/eslint-plugin": "^4.15.2",
         "@typescript-eslint/parser": "^4.15.2",
         "babel-eslint": "^10.0.3",
@@ -59,14 +59,14 @@
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jest": "^22.6.3",
         "eslint-plugin-prettier": "^3.1.1",
-        "jest": "^24.9.0",
         "prettier": "^1.19.1",
         "rimraf": "^2.6.2",
         "rollup": "^1.29.0",
         "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-typescript2": "^0.25.3",
         "ts-jest": "^24.3.0",
-        "typescript": "^4.1.2",
+        "jest": "^26.6.3",
+        "typescript": "^4.9.5",
         "zx": "^4.2.0"
     }
 }
