--- a/package.json
+++ b/package.json
@@ -34,23 +34,28 @@
         "pure.d.ts"
     ],
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.552.0",
         "@babel/preset-env": "^7.24.0",
         "amazon-cognito-identity-js": "^4.5.12",
         "dotenv": "^16.3.2",
-        "graphql-request": "^3.4.0"
+        "graphql-request": "^3.7.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.0.0",
         "@rollup/plugin-replace": "^2.3.1",
         "@types/jest": "^29.5.12",
-        "@typescript-eslint/eslint-plugin": "^4.15.2",
-        "@typescript-eslint/parser": "^4.15.2",
+        "@types/node": "^20.12.7",
+        "@types/uuid": "^9.0.8",
+        "@typescript-eslint/eslint-plugin": "^7.6.0",
+        "@typescript-eslint/parser": "^7.6.0",
         "babel-eslint": "^10.0.3",
         "conditional-type-checks": "^1.0.5",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.8.0",
-        "eslint-plugin-import": "^2.18.2",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^2.6.0",
+        "eslint-plugin-import": "^2.6.0",
         "eslint-plugin-jest": "^22.6.3",
         "eslint-plugin-prettier": "^3.1.1",
+        "globals": "^15.0.0",
         "jest": "^29.7.0",
         "prettier": "^1.19.1",
         "rimraf": "^2.6.2",
@@ -59,6 +64,7 @@
         "rollup-plugin-typescript2": "^0.25.3",
         "ts-jest": "^29.1.2",
         "typescript": "^5.4.2",
+        "typescript-eslint": "^7.6.0",
         "zx": "^4.2.0"
     }
 }
