--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
     "axios": "^1.7.2",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0"
+  },
+  "publishConfig": {
+    "@legalesign:registry": "https://npm.pkg.github.com"
   }
 }
