--- a/package.json
+++ b/package.json
@@ -17,43 +17,24 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite --host",
-    "build": "rimraf build/**/* && tsc && vite build && dts-bundle-generator --config ./dts-bundle-generator.config.ts && copyfiles ./package.json build",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
-    "lint:scripts": "eslint . --ext .ts",
-    "lint:styles": "stylelint ./**/*.{css,scss}",
-    "format:scripts": "prettier . --write",
-    "format:styles": "stylelint ./**/*.{css,scss} --fix",
-    "format": "npm run format:scripts && npm run format:styles",
-    "prepare": "husky install && husky set .husky/pre-commit 'npx lint-staged' && git add .husky/pre-commit",
-    "uninstall-husky": "npm uninstall husky --no-save && git config --unset core.hooksPath && npx rimraf .husky"
+    "test": "glob -c \"tsx --env-file-if-exists .env --env-file-if-exists .env.test --test --test-reporter spec \" \"./test/**/*.test.ts\"",
+    "build": "tsc"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.9",
+    "@babel/preset-env": "^7.25.9",
+    "@babel/preset-typescript": "^7.25.9",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
-    "@vitest/coverage-v8": "^1.2.1",
-    "copyfiles": "^2.4.1",
-    "dts-bundle-generator": "^9.2.4",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "postcss": "^8.4.33",
-    "postcss-scss": "^4.0.9",
+    "babel-jest": "^29.7.0",
+    "glob": "^11.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.4",
-    "rimraf": "^5.0.5",
-    "stylelint": "^16.2.0",
-    "stylelint-config-recommended": "^14.0.0",
-    "stylelint-config-sass-guidelines": "^11.0.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-prettier": "^5.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vitest": "^1.2.1"
+    "tsx": "^4.19.1",
+    "typescript": "^5.7.0-dev.20241024"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.620.0",
@@ -64,5 +45,10 @@
   },
   "publishConfig": {
     "@legalesign:registry": "https://npm.pkg.github.com"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/test/setEnvVars.js"
+    ]
   }
 }
