--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     },
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ES2020"],
     "moduleResolution": "Node",
+    "module": "esnext",
     "strict": true,
     "sourceMap": true,
     "resolveJsonModule": true,
@@ -19,8 +19,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["vite/client", "node"],
   },
-  "include": ["src"],
-  "exclude": ["**/*.test.ts", "node_modules", "test/**", ".history/**"],
+  "include": ["./**/*test.*"],
+  "exclude": ["node_modules", ".history/**"],
 }
